--- a/css/home.css
+++ b/css/home.css
@@ -205,7 +205,7 @@ h1 {
 }
 
 .spotify-icon {
-  margin-bottom: 0.3em;
+  margin-bottom: 0.4em;
   font-size: 1.8rem;
   color: var(--color-white);
   text-shadow: #2f3640 2px 2px 5px;
@@ -219,6 +219,10 @@ h1 {
 
 @media (max-width: 500px) {
   .tooltip-text {
+    display: none;
+  }
+
+  .tooltip-text-three {
     display: none;
   }
 }
