--- a/philosophyMF.scss
+++ b/philosophyMF.scss
@@ -136,15 +136,16 @@ ul {
 .skull-img {
   position: absolute;
   z-index: -1;
-  top: 45%;
+  top: 20%;
   left: 48%;
 }
 
 .tashi-img {
   position: absolute;
   z-index: -1;
-  top: 45%;
+  top: 65%;
   left: 0;
+  display: none;
 }
 
 .aba-img {
@@ -155,12 +156,14 @@ ul {
 
 .section-one {
   position: relative;
+  padding-top: 0.5em;
 }
 
 .section-two {
   padding-bottom: 2em;
   display: flex;
   justify-content: center;
+  position: relative;
 }
 
 .section-one-content {
@@ -177,6 +180,12 @@ ul {
   .page-wrapper {
     display: block;
   }
+
+  // .skull-img {
+  //   width: 70%;
+  //   top: -20%;
+  //   left: 60%;
+  // }
 }
 
 @media (min-width: 800px) {
@@ -226,11 +235,11 @@ ul {
   }
   .header-title {
     font-size: 8rem;
-    margin-top: 1.3em;
+    margin-top: 1.1em;
   }
 
   .section-one-content {
-    font-size: 2.5rem;
+    font-size: 3rem;
     margin-right: 0;
     padding-right: 0.5em;
     padding-top: 0;
@@ -252,6 +261,7 @@ ul {
   .aba-img {
     width: 30%;
     border-radius: 0px;
+    display: none;
   }
   .tashi-img {
     display: none;
