--- a/css/blogHome.css
+++ b/css/blogHome.css
@@ -246,4 +246,8 @@ ul {
     font-size: 1.2em;
     letter-spacing: 2px;
   }
+
+  .article-date {
+    font-size: 1.1em;
+  }
 }/*# sourceMappingURL=blogHome.css.map */
