--- a/blogHome.scss
+++ b/blogHome.scss
@@ -133,6 +133,8 @@ ul {
 .frame {
   width: 75%;
   padding-bottom: 5em;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .blog-entry {
@@ -213,7 +215,7 @@ ul {
   }
 
   .blog-link:hover .blog-thumbnail {
-    filter: invert(90%) hue-rotate(90deg);
+    filter: grayscale(80%);
   }
 
   .container {
