--- a/css/blogBoiler.css
+++ b/css/blogBoiler.css
@@ -18,6 +18,10 @@
   --color-soft-white: rgba(236, 240, 241, 0.7);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: var(--roboto-font);
@@ -64,6 +68,16 @@ h3 {
 
 ul {
   list-style: none;
+}
+
+.jump-to-list {
+  list-style: circle;
+}
+
+.jump-to-list-link {
+  color: var(--color-white);
+  font-style: italic;
+  text-decoration: none;
 }
 
 .nav-toggle {
@@ -115,6 +129,18 @@ ul {
   text-shadow: var(--color-red) 3px 3px 3px;
 }
 
+.bottom-nav {
+  text-align: right;
+}
+
+.boost-font {
+  font-size: 2rem;
+}
+
+.article-wrap {
+  padding-bottom: 4em;
+}
+
 .container {
   width: 90%;
 }
@@ -136,6 +162,26 @@ ul {
 
 .article-main {
   margin-top: 1em;
+}
+
+.article-subhead-large {
+  font-family: var(--roboto-font);
+  font-size: 1.5rem;
+  text-transform: uppercase;
+}
+
+.quiet-link {
+  color: var(--color-white);
+  font-style: italic;
+  text-decoration: underline;
+}
+
+.quiet-link:hover {
+  color: var(--color-red);
+}
+
+.caption {
+  font-size: 0.85rem;
 }
 
 .has-dropcap::first-letter {
@@ -228,6 +274,9 @@ ul {
   .table td {
     font-size: 0.8rem;
   }
+  .jump-to-list-link {
+    font-size: 1.2rem;
+  }
 }
 @media (min-width: 600px) {
   .container {
@@ -240,5 +289,8 @@ ul {
     font-family: var(--p-font);
     font-size: 1rem;
     margin-left: 3em;
+  }
+  .jump-to-list-link:hover {
+    color: var(--color-red);
   }
 }/*# sourceMappingURL=blogBoiler.css.map */
