--- a/css/blogBoiler.css
+++ b/css/blogBoiler.css
@@ -260,6 +260,10 @@ ul {
   padding: 5px;
 }
 
+.casual-link {
+  color: var(--color-white);
+}
+
 .content-paragraph-subhead {
   font-size: 1.5rem;
   font-style: italic;
@@ -276,6 +280,9 @@ ul {
   }
   .jump-to-list-link {
     font-size: 1.2rem;
+  }
+  .blog-photo-tall {
+    width: 85%;
   }
 }
 @media (min-width: 600px) {
