--- a/css/blogBoiler.css
+++ b/css/blogBoiler.css
@@ -51,9 +51,25 @@ h3 {
   font-size: 2rem;
 }
 
+.italics {
+  font-style: italic;
+}
+
+.underline {
+  -webkit-text-decoration: underline 0.35px;
+          text-decoration: underline 0.35px;
+  text-underline-offset: 3px;
+}
+
 .container {
   width: 90%;
   margin: 0 auto;
+}
+
+.table-container {
+  width: 95%;
+  display: flex;
+  justify-content: center;
 }
 
 .df {
