--- a/blogBoiler.scss
+++ b/blogBoiler.scss
@@ -59,6 +59,33 @@ h3 {
   text-underline-offset: 3px;
 }
 
+.pull-quote {
+  width: 90%;
+  outline: 1.2px dashed var(--color-white);
+  border-radius: 10px;
+  outline-offset: 10px;
+}
+
+.pull-quote-title {
+  font-weight: 200;
+  font-size: 0.9em;
+  font-style: italic;
+  letter-spacing: 5px;
+}
+
+.pull-quote-text {
+  font-weight: 100;
+  font-size: 1.1em;
+}
+.pull-quote-credit {
+  font-weight: 300;
+  font-size: 0.8em;
+}
+
+.align-right {
+  text-align: right;
+}
+
 .container {
   width: 90%;
   margin: 0 auto;
@@ -75,6 +102,11 @@ h3 {
 .df-center {
   display: flex;
   justify-content: center;
+}
+.df-center-straight {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 ul {
@@ -167,6 +199,10 @@ ul {
   h2 {
     letter-spacing: 0.2em;
   }
+  h3 {
+    font-size: 1.4rem;
+    letter-spacing: 0.2em;
+  }
 
   h6 {
     text-align: right;
@@ -199,6 +235,19 @@ ul {
 
 .caption {
   font-size: 0.85rem;
+}
+
+.vertical-photo-caption {
+  font-size: 0.85rem;
+  margin-left: 4rem;
+  width: 70%;
+  text-align: center;
+}
+.vertical-photo-caption-squeeze {
+  font-size: 0.85rem;
+  margin-left: 5rem;
+  width: 40%;
+  text-align: center;
 }
 
 .photo-credit-offical {
@@ -246,6 +295,14 @@ ul {
   width: 70%;
 }
 
+.blog-photo-tall-squeeze {
+  width: 55%;
+}
+
+.margin-zero {
+  margin: 0 auto;
+}
+
 .article-list__link {
   color: var(--color-white);
   font-size: 0.85em;
@@ -267,7 +324,7 @@ ul {
   border: 1px solid #c0c0c0;
   border-collapse: collapse;
   padding: 5px;
-  margin: 2rem 0;
+  margin: 1rem 0;
 }
 
 .table .table-title {
@@ -298,6 +355,14 @@ ul {
   position: relative;
 }
 
+.content-paragraph-subhead-smaller {
+  font-size: 1rem;
+  font-style: italic;
+  font-weight: 100;
+  margin: 0 0;
+  position: relative;
+}
+
 @media (max-width: 500px) {
   .table th {
     font-size: 0.7rem;
@@ -315,6 +380,27 @@ ul {
     font-family: var(--p-font);
     font-size: 0.8rem;
     margin-left: 5.5em;
+  }
+  .pull-quote-credit {
+    font-weight: 300;
+    font-size: 0.6em;
+  }
+  .blog-photo-tall-squeeze {
+    width: 85%;
+  }
+  .vertical-photo-caption-squeeze {
+    font-size: 0.8rem;
+    margin-left: 0rem;
+
+    text-align: right;
+    overflow-wrap: break-word;
+  }
+
+  .vertical-photo-caption {
+    font-size: 0.8rem;
+    margin-left: 0rem;
+    width: 70%;
+    text-align: center;
   }
 }
 
