--- a/home.scss
+++ b/home.scss
@@ -202,7 +202,7 @@ h1 {
 
 .instagram-icon {
   margin-bottom: 0.3em;
-  font-size: 2rem;
+  font-size: 2.3rem;
   color: var(--color-white);
   text-shadow: #2f3640 2px 2px 5px;
 }
@@ -219,10 +219,10 @@ h1 {
   text-shadow: #2f3640 2px 2px 5px;
 }
 .strava-icon {
-  font-size: 2.2rem;
+  font-size: 3rem;
   color: var(--color-white);
   text-shadow: #2f3640 2px 2px 5px;
-  margin-left: 0.5rem;
+  // margin-left: 1rem;
 }
 
 @media (max-width: 500px) {
@@ -236,7 +236,7 @@ h1 {
     display: none;
   }
   .strava-icon {
-    font-size: 1.7rem;
+    font-size: 2rem;
     margin-left: 0.2rem;
   }
 }
