--- a/coaching.scss
+++ b/coaching.scss
@@ -9,6 +9,7 @@
   --header-font: "Plaster", cursive;
   --section-title-font: "Fredoka", sans-serif;
   --roboto-font: "Roboto Slab", serif;
+  --raleway-font: "Raleway", sans-serif;
   --color-gold: #f6e58d;
   --color-white: #ecf0f1;
   --color-black: #2f3640;
@@ -65,7 +66,7 @@ ul {
   font-size: 3rem;
   color: var(--color-white);
   margin-left: 0.25em;
-  margin-top: 0;
+  margin-top: 0.8rem;
   position: absolute;
   z-index: 100;
   cursor: pointer;
@@ -85,16 +86,17 @@ ul {
 
 .nav__list {
   text-align: center;
-  margin-top: 1em;
+  margin-top: 0;
   margin-left: 0;
   padding-left: 0;
   margin-bottom: 0;
   padding-bottom: 0;
+  background-color: rgba(56.5, 56.5, 56.5, 0.4);
 }
 
-.nav__item {
-  margin-top: 0.5em;
-}
+// .nav__item {
+//   padding-top: 1em;
+// }
 
 .nav__link {
   color: var(--color-white);
@@ -110,18 +112,38 @@ ul {
   text-shadow: var(--color-red) 3px 3px 3px;
 }
 
+.home-button-link {
+  visibility: hidden;
+}
+
 .title-section {
   margin-top: 2.5em;
   position: relative;
 }
 .title-text-coaching {
-  font-family: var(--roboto-font);
-  margin-top: 1em;
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
   font-size: 3rem;
-  font-weight: 300;
-  letter-spacing: 10px;
-  text-align: center;
+  letter-spacing: 6px;
+  text-shadow: #2f3640 1px 1px 5px;
 }
+
+.preface-hero {
+  width: 70%;
+  position: absolute;
+  top: 68%;
+  left: 15%;
+  background-color: rgba(223, 230, 233, 0.6);
+  color: black;
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+  border-radius: 10px;
+  font-size: 1.8rem;
+  text-align: center;
+  padding: 5px 5px;
+}
+
 .body-subhead {
   font-size: 1.5rem;
 }
@@ -129,13 +151,213 @@ ul {
   font-style: italic;
 }
 
-.pyramid-img {
-  width: 50%;
-  position: absolute;
-  top: -40%;
-  right: 0;
-  z-index: -1;
+.flex-center {
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.section-offering {
+  margin-bottom: 2rem;
+}
+.body-content {
+  margin-bottom: 3rem;
+}
+
+.section-hero {
+  margin: 0;
+  padding: 0;
+  position: relative;
+  background-image: url(/images/blog-photos/climbinglightBWcrop2.jpg);
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+}
+.section-hype {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.selfie-thumbnail {
+  width: 60%;
+}
+
+.pitch {
+  font-family: "Raleway", sans-serif;
+  font-size: 2rem;
+  text-align: center;
+  color: var(--color-grey);
+}
+.pitch-subtext {
+  font-family: var(--p-font);
+  font-size: 1.3rem;
+  text-align: center;
+}
+.tenets-list {
+  margin-top: 0;
+  list-style: disc;
+}
+
+.offering-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.preface {
+  font-family: var(--p-font);
+  font-size: 1rem;
+  text-align: center;
+}
+.each-list-item {
+  margin: 0;
+  padding: 0;
+}
+.offering-each-list-item {
+  margin: 0;
+  padding: 0;
+  border: 1px solid var(--color-white);
+  border-top: 0;
+  margin-bottom: 1rem;
+  border-radius: 10px;
+}
+
+.list-heading {
+  font-family: var(--raleway-font);
+  font-size: 2rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  padding: 0;
+  text-align: center;
+  letter-spacing: 1.5px;
+}
+.offering-list-heading {
+  font-family: "Raleway", sans-serif;
+  font-size: 2rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  letter-spacing: 1.5px;
+  margin-bottom: 1rem;
+}
+.list-heading-subtitle {
+  font-family: var(--p-font);
+  font-size: 1.2rem;
+  font-weight: 100;
+  font-style: italic;
+  margin-top: 0.3rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+.list-item-title {
+  font-family: var(--roboto-font);
+  font-size: 1.5rem;
+  font-weight: 100;
+  margin: 0;
+  text-decoration: underline dashed 1px var(--color-red);
+  text-underline-offset: 4px;
+}
+.list-item-body {
+  margin-top: 0;
+  font-family: var(--p-font);
+  font-size: 1rem;
+}
+.offering-list-item-title {
+  font-family: var(--roboto-font);
+  font-size: 1.2rem;
+  font-weight: 300;
+  margin-top: 1rem;
+  margin-bottom: 0.4rem;
+  margin-top: 0;
+  padding: 5px 0;
+  letter-spacing: 4px;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: var(--color-white);
+  color: #2f3640;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+.offering-list-item-body {
+  margin-top: 0;
+  font-family: var(--p-font);
+  font-size: 1rem;
+  text-align: center;
+  padding: 0 5px;
+}
+.pricing-list-item-title {
+  font-family: var(--roboto-font);
+  font-size: 1.4rem;
+  font-weight: 500;
+  margin-bottom: 0.4rem;
+  margin-top: 0;
+  font-style: italic;
+}
+.pricing-list-item-body {
+  margin-top: 0;
+  font-family: var(--p-font);
+  font-size: 1.2rem;
+}
+.pricing-tier {
+  padding: 10px 8px;
+  border-radius: 10px;
+  margin-bottom: 1.5rem;
+}
+.pricing-tier:nth-of-type(1) {
+  border: 2px dashed var(--color-gold);
+}
+.pricing-tier:nth-of-type(2) {
+  border: 2px dashed #00cec9;
+}
+.pricing-tier:nth-of-type(3) {
+  border: 2px dashed #ff7675;
+}
+
+.elipse-icon {
+  font-size: 0.8em;
+}
+
+.pricing-text {
+  font-weight: 700;
+}
+.contact-body {
+  display: flex;
+  justify-content: center;
+}
+.contact-text {
+  text-align: center;
+  width: 70%;
+  font-family: var(--roboto-font);
+  font-weight: 500;
+  background-color: #ecf0f1;
+  color: #2f3640;
+  padding: 5px 0;
+  border-radius: 10px;
+  margin-bottom: 0;
+}
+.contact-text-body {
+  font-family: var(--p-font);
+  font-size: 1.5rem;
+  text-align: center;
+  margin-top: 0.5rem;
+}
+.email {
+  font-family: var(--raleway-font);
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+.arrow-down-icon {
+  font-size: 2em;
+}
+// .section-contact {
+//   padding-bottom: 2rem;
+// }
 
 @media (min-width: 800px) {
   .nav-toggle {
@@ -159,5 +381,123 @@ ul {
 
   .nav__link:hover {
     text-shadow: var(--color-red) 3px 3px 3px;
+  }
+
+  .home-button-link {
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+    visibility: visible;
+    cursor: pointer;
+  }
+
+  .home-button {
+    position: absolute;
+    z-index: 10;
+    top: 5%;
+    left: 2%;
+    cursor: pointer;
+  }
+  .home-button-text {
+    font-family: var(--roboto-font);
+    font-weight: 300;
+    letter-spacing: 1.2px;
+    color: #2f3640;
+    font-size: 1.5rem;
+    background-color: rgba(236, 240, 241, 0.8);
+    padding: 10px 10px;
+    text-transform: uppercase;
+    border-radius: 10px;
+    transition: 0.5s ease-in-out;
+  }
+
+  .home-button:hover .home-button-text {
+    color: rgba(236, 240, 241, 1);
+    background-color: #2f3640;
+  }
+
+  .container {
+    width: 70%;
+    margin: 0 auto;
+  }
+
+  //hero
+  .section-hero {
+    background-image: url(/images/blog-photos/widescreenHero.jpg);
+    height: 100vh;
+  }
+
+  .title-text-coaching {
+    font-size: 5rem;
+    letter-spacing: 6px;
+    text-shadow: #2f3640 4px 4px 10px;
+  }
+
+  .preface-hero {
+    width: 40%;
+    position: absolute;
+    top: 75%;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(223, 230, 233, 0.7);
+  }
+  //hype
+  .section-hype {
+    margin-top: 3rem;
+  }
+  .pitch {
+    font-family: "Raleway", sans-serif;
+    font-size: 3rem;
+    text-align: center;
+  }
+  .pitch-subtext {
+    font-family: var(--p-font);
+    font-size: 2.2rem;
+    text-align: center;
+  }
+  //services
+
+  .list-heading {
+    font-size: 3rem;
+    margin-bottom: 0.5em;
+  }
+  .offering-list-heading {
+    font-size: 3rem;
+    margin-bottom: 0.7em;
+  }
+  .offering-list-item-title {
+    font-size: 1.7rem;
+
+    padding: 10px 0;
+  }
+  .offering-list-item-body {
+    font-size: 1.2rem;
+  }
+  .offering-each-list-item {
+    margin-bottom: 2rem;
+  }
+  //tenents
+  .list-item-title {
+    font-size: 2rem;
+    text-decoration: underline dashed 2px var(--color-red);
+  }
+  .list-item-body {
+    font-size: 1.3rem;
+  }
+  //pricing
+  .pricing-list-item-title {
+    font-family: var(--roboto-font);
+    font-size: 1.7rem;
+    font-weight: 500;
+    margin-bottom: 0.4rem;
+    margin-top: 0;
+    font-style: italic;
+  }
+  .pricing-list-item-body {
+    margin-top: 0;
+    font-family: var(--p-font);
+    font-size: 1.3rem;
   }
 }
