--- a/css/blogHome.css
+++ b/css/blogHome.css
@@ -9,6 +9,7 @@
   --header-font: "Plaster", cursive;
   --section-title-font: "Fredoka", sans-serif;
   --roboto-font: "Roboto Slab", serif;
+  --raleway-font: "Raleway", sans-serif;
   --color-gold: #f6e58d;
   --color-white: #ecf0f1;
   --color-black: #2f3640;
@@ -23,7 +24,7 @@ body {
   font-family: var(--roboto-font);
   font-size: 1.3rem;
   color: var(--color-white);
-  background-color: var(--color-grey);
+  background-color: #2f3640;
 }
 
 img {
@@ -32,7 +33,7 @@ img {
 
 h1 {
   margin-top: 0;
-  font-family: var(--header-font);
+  font-family: var(--raleway-font);
   font-size: 3rem;
   line-height: 90%;
   color: var(--color-white);
@@ -99,8 +100,8 @@ ul {
 .nav__link {
   color: var(--color-white);
   text-decoration: none;
-  font-family: var(--section-title-font);
-  font-style: normal;
+  font-family: var(--raleway-font);
+  font-weight: 200;
   text-transform: uppercase;
   transition: 0.2s ease-in-out;
   font-size: 1.6rem;
@@ -121,6 +122,11 @@ ul {
 .header-container {
   display: flex;
   justify-content: center;
+}
+
+.substack-announcement {
+  margin-top: 1rem;
+  margin-bottom: 2rem;
 }
 
 .substack-link {
@@ -159,6 +165,8 @@ ul {
   padding-top: 0.5rem;
 }
 .header-link h2 {
+  font-family: var(--raleway-font);
+  font-weight: 700;
   text-align: center;
   margin: 0;
 }
@@ -303,6 +311,9 @@ ul {
   }
   .blog-link:hover .blog-thumbnail {
     filter: grayscale(80%);
+  }
+  .substack-link:hover .child {
+    border: 4px solid var(--color-white);
   }
   .container {
     width: 90%;
