--- a/css/coaching.css
+++ b/css/coaching.css
@@ -23,7 +23,7 @@ body {
   font-family: var(--roboto-font);
   font-size: 1.3rem;
   color: var(--color-white);
-  background-color: var(--color-grey);
+  background-color: #2f3640;
 }
 
 img {
