--- a/coaching.scss
+++ b/coaching.scss
@@ -101,8 +101,8 @@ ul {
 .nav__link {
   color: var(--color-white);
   text-decoration: none;
-  font-family: var(--section-title-font);
-  font-style: normal;
+  font-family: var(--raleway-font);
+  font-weight: 300;
   text-transform: uppercase;
   transition: 0.2s ease-in-out;
   font-size: 1.6rem;
