--- a/css/coaching.css
+++ b/css/coaching.css
@@ -96,8 +96,8 @@ ul {
 .nav__link {
   color: var(--color-white);
   text-decoration: none;
-  font-family: var(--section-title-font);
-  font-style: normal;
+  font-family: var(--raleway-font);
+  font-weight: 300;
   text-transform: uppercase;
   transition: 0.2s ease-in-out;
   font-size: 1.6rem;
