--- a/coaching.scss
+++ b/coaching.scss
@@ -94,10 +94,6 @@ ul {
   background-color: rgba(56.5, 56.5, 56.5, 0.4);
 }
 
-// .nav__item {
-//   padding-top: 1em;
-// }
-
 .nav__link {
   color: var(--color-white);
   text-decoration: none;
@@ -106,6 +102,16 @@ ul {
   text-transform: uppercase;
   transition: 0.2s ease-in-out;
   font-size: 1.6rem;
+}
+
+.nav__item {
+  margin-bottom: 0.25rem;
+}
+.nav__item:nth-of-type(1) {
+  padding-top: 0.5rem;
+}
+.nav__item:nth-of-type(4) {
+  padding-bottom: 0.5rem;
 }
 
 .nav__link:hover {
