--- a/css/blogHome.css
+++ b/css/blogHome.css
@@ -115,7 +115,7 @@ ul {
   font-size: 5rem;
   margin-top: 0.65em;
   margin-left: 0.2em;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   letter-spacing: 2px;
 }
 
@@ -208,7 +208,7 @@ ul {
   position: absolute;
   top: 0;
   left: 0;
-  width: 30%;
+  width: 28%;
   font-family: var(--roboto-font);
   font-weight: 100;
   padding: 0.5em 0.2em;
@@ -216,6 +216,7 @@ ul {
   z-index: 1000;
   background-color: var(--color-red);
   border-top-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .blog-thumbnail-two {
@@ -226,37 +227,40 @@ ul {
   color: #ecf0f1;
 }
 
-.article-title-experiment {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  background-color: var(--color-soft-white);
-  border-bottom-right-radius: 10px;
-  width: 55%;
-  padding-left: 0.5em;
-  padding-top: 0.5em;
-  padding-right: 0.1em;
-}
-.article-title-experiment h2 {
-  font-family: var(--p-font);
-  font-size: 1.6rem;
-  color: var(--color-black);
-}
-
 .article-title {
   position: absolute;
   bottom: 5px;
   right: 0;
   background-color: var(--color-soft-white);
   border-bottom-right-radius: 10px;
-  width: 55%;
+  border-bottom-left-radius: 10px;
+  width: 100%;
   padding-left: 0.5em;
   padding-top: 0.5em;
   padding-right: 0.1em;
 }
 .article-title h2 {
-  font-family: var(--p-font);
-  font-size: 1.4rem;
+  font-family: var(--raleway-font);
+  font-size: 1.2rem;
+  color: var(--color-black);
+  text-align: center;
+}
+
+.substack-article-title {
+  position: absolute;
+  bottom: 5px;
+  right: 0;
+  background-color: var(--color-soft-white);
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  width: 100%;
+  padding-left: 0.5em;
+  padding-top: 0.5em;
+  padding-right: 0.1em;
+}
+.substack-article-title h2 {
+  font-family: var(--raleway-font);
+  font-size: 1.1rem;
   color: var(--color-black);
 }
 
