--- a/css/blogHome.css
+++ b/css/blogHome.css
@@ -208,13 +208,13 @@ ul {
   position: absolute;
   top: 0;
   left: 0;
-  width: 28%;
-  font-family: var(--roboto-font);
-  font-weight: 100;
+  width: 30%;
+  font-family: var(--raleway-font);
+  font-weight: 200;
   padding: 0.5em 0.2em;
   font-size: 1rem;
   z-index: 1000;
-  background-color: var(--color-red);
+  background-color: var(--color-soft-white);
   border-top-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
