--- a/blogHome.scss
+++ b/blogHome.scss
@@ -215,6 +215,7 @@ ul {
   font-size: 1rem;
   z-index: 1000;
   background-color: var(--color-soft-white);
+  color: #2f3640;
   border-top-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
