--- a/css/blogHome.css
+++ b/css/blogHome.css
@@ -210,12 +210,12 @@ ul {
   left: 0;
   width: 30%;
   font-family: var(--raleway-font);
-  font-weight: 200;
+  font-weight: 400;
   padding: 0.5em 0.2em;
   font-size: 1rem;
   z-index: 1000;
-  background-color: var(--color-soft-white);
-  color: #2f3640;
+  color: var(--color-soft-white);
+  background-color: #2f3640;
   border-top-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
