--- a/css/contactMF.css
+++ b/css/contactMF.css
@@ -154,6 +154,11 @@ ul {
   margin-bottom: 2rem;
 }
 
+.compress-logo {
+  width: 60%;
+  margin-bottom: 2rem;
+}
+
 .rrunning-logo {
   width: 72%;
 }
