--- a/contactMF.scss
+++ b/contactMF.scss
@@ -157,6 +157,10 @@ ul {
   width: 50%;
   margin-bottom: 2rem;
 }
+.compress-logo {
+  width: 60%;
+  margin-bottom: 2rem;
+}
 .rrunning-logo {
   width: 72%;
 }
