--- a/css/home2023.css
+++ b/css/home2023.css
@@ -130,9 +130,25 @@ h1 {
   left: 2%;
   z-index: 1002;
   font-family: var(--raleway-font);
-  font-weight: 400;
+  font-weight: 500;
   color: var(--color-white);
   font-size: 1.6rem;
+}
+
+.name-text {
+  position: absolute;
+  top: 2%;
+  left: 2%;
+  z-index: 1002;
+  font-family: var(--raleway-font);
+  font-weight: 500;
+  color: #2f3640;
+  font-size: 1.6rem;
+  -webkit-background-clip: text;
+          background-clip: text;
+  background-image: linear-gradient(99deg, rgb(236, 240, 241) 22%, rgb(9, 241, 184) 39%, rgb(0, 162, 255) 54%, rgb(214, 48, 49) 68%, rgb(254, 217, 15) 88%);
+  -webkit-text-stroke-color: transparent;
+  -webkit-text-stroke-width: 1.3px;
 }
 
 .icon-container {
@@ -225,9 +241,14 @@ h1 {
     left: 1.8%;
     z-index: 1002;
     font-family: var(--raleway-font);
-    font-weight: 400;
-    color: var(--color-white);
+    font-weight: 500;
+    color: #2f3640;
     font-size: 2rem;
+    -webkit-background-clip: text;
+            background-clip: text;
+    background-image: linear-gradient(99deg, rgb(236, 240, 241) 22%, rgb(9, 241, 184) 39%, rgb(0, 162, 255) 54%, rgb(214, 48, 49) 68%, rgb(254, 217, 15) 88%);
+    -webkit-text-stroke-color: transparent;
+    -webkit-text-stroke-width: 2px;
   }
   .nav {
     padding-top: 20%;
