--- a/home2023.scss
+++ b/home2023.scss
@@ -122,9 +122,32 @@ h1 {
   left: 2%;
   z-index: 1002;
   font-family: var(--raleway-font);
-  font-weight: 400;
+  font-weight: 500;
+
   color: var(--color-white);
   font-size: 1.6rem;
+}
+
+.name-text {
+  position: absolute;
+  top: 2%;
+  left: 2%;
+  z-index: 1002;
+  font-family: var(--raleway-font);
+  font-weight: 500;
+  color: #2f3640;
+  font-size: 1.6rem;
+  background-clip: text;
+  background-image: linear-gradient(
+    99deg,
+    rgba(236, 240, 241, 1) 22%,
+    rgba(9, 241, 184, 1) 39%,
+    rgba(0, 162, 255, 1) 54%,
+    rgba(214, 48, 49, 1) 68%,
+    rgba(254, 217, 15, 1) 88%
+  );
+  -webkit-text-stroke-color: transparent;
+  -webkit-text-stroke-width: 1.3px;
 }
 
 .icon-container {
@@ -220,9 +243,20 @@ h1 {
     left: 1.8%;
     z-index: 1002;
     font-family: var(--raleway-font);
-    font-weight: 400;
-    color: var(--color-white);
+    font-weight: 500;
+    color: #2f3640;
     font-size: 2rem;
+    background-clip: text;
+    background-image: linear-gradient(
+      99deg,
+      rgba(236, 240, 241, 1) 22%,
+      rgba(9, 241, 184, 1) 39%,
+      rgba(0, 162, 255, 1) 54%,
+      rgba(214, 48, 49, 1) 68%,
+      rgba(254, 217, 15, 1) 88%
+    );
+    -webkit-text-stroke-color: transparent;
+    -webkit-text-stroke-width: 2px;
   }
 
   .nav {
