--- a/css/home2023.css
+++ b/css/home2023.css
@@ -146,7 +146,7 @@ h1 {
   font-size: 1.6rem;
   -webkit-background-clip: text;
           background-clip: text;
-  background-image: linear-gradient(99deg, rgb(236, 240, 241) 22%, rgb(9, 241, 184) 39%, rgb(0, 162, 255) 54%, rgb(214, 48, 49) 68%, rgb(254, 217, 15) 88%);
+  background-image: linear-gradient(90deg, rgb(236, 240, 241) 0%, rgb(236, 240, 241) 30%, rgba(236, 240, 241, 0.8) 32%, rgba(236, 240, 241, 0.4) 100%);
   -webkit-text-stroke-color: transparent;
   -webkit-text-stroke-width: 1.3px;
 }
@@ -246,7 +246,7 @@ h1 {
     font-size: 2rem;
     -webkit-background-clip: text;
             background-clip: text;
-    background-image: linear-gradient(99deg, rgb(236, 240, 241) 22%, rgb(9, 241, 184) 39%, rgb(0, 162, 255) 54%, rgb(214, 48, 49) 68%, rgb(254, 217, 15) 88%);
+    background-image: linear-gradient(99deg, rgb(236, 240, 241) 0%, rgb(236, 240, 241) 30%, rgba(236, 240, 241, 0.8) 32%, rgba(236, 240, 241, 0.4) 100%);
     -webkit-text-stroke-color: transparent;
     -webkit-text-stroke-width: 2px;
   }
