--- a/css/home2023.css
+++ b/css/home2023.css
@@ -126,19 +126,8 @@ h1 {
 
 .name-text {
   position: absolute;
-  top: 2%;
-  left: 2%;
-  z-index: 1002;
-  font-family: var(--raleway-font);
-  font-weight: 500;
-  color: var(--color-white);
-  font-size: 1.6rem;
-}
-
-.name-text {
-  position: absolute;
-  top: 2%;
-  left: 2%;
+  top: 3%;
+  left: 3%;
   z-index: 1002;
   font-family: var(--raleway-font);
   font-weight: 500;
@@ -147,6 +136,7 @@ h1 {
   -webkit-background-clip: text;
           background-clip: text;
   background-image: linear-gradient(90deg, rgb(236, 240, 241) 0%, rgb(236, 240, 241) 30%, rgba(236, 240, 241, 0.8) 32%, rgba(236, 240, 241, 0.4) 100%);
+  background-image: linear-gradient(220deg, rgb(47, 54, 64) 98%, rgb(236, 240, 241) 100%);
   -webkit-text-stroke-color: transparent;
   -webkit-text-stroke-width: 1.3px;
 }
