--- a/home2023.scss
+++ b/home2023.scss
@@ -118,41 +118,8 @@ h1 {
 
 .name-text {
   position: absolute;
-  top: 2%;
-  left: 2%;
-  z-index: 1002;
-  font-family: var(--raleway-font);
-  font-weight: 500;
-
-  color: var(--color-white);
-  font-size: 1.6rem;
-}
-
-// .name-text {
-//   position: absolute;
-//   top: 2%;
-//   left: 2%;
-//   z-index: 1002;
-//   font-family: var(--raleway-font);
-//   font-weight: 500;
-//   color: #2f3640;
-//   font-size: 1.6rem;
-//   background-clip: text;
-//   background-image: linear-gradient(
-//     99deg,
-//     rgba(236, 240, 241, 1) 22%,
-//     rgba(9, 241, 184, 1) 39%,
-//     rgba(0, 162, 255, 1) 54%,
-//     rgba(214, 48, 49, 1) 68%,
-//     rgba(254, 217, 15, 1) 88%
-//   );
-//   -webkit-text-stroke-color: transparent;
-//   -webkit-text-stroke-width: 1.3px;
-// }
-.name-text {
-  position: absolute;
-  top: 2%;
-  left: 2%;
+  top: 3%;
+  left: 3%;
   z-index: 1002;
   font-family: var(--raleway-font);
   font-weight: 500;
@@ -167,7 +134,11 @@ h1 {
     rgba(236, 240, 241, 0.8) 32%,
     rgba(236, 240, 241, 0.4) 100%
   );
-
+  background-image: linear-gradient(
+    220deg,
+    rgba(47, 54, 64, 1) 98%,
+    rgba(236, 240, 241, 1) 100%
+  );
   -webkit-text-stroke-color: transparent;
   -webkit-text-stroke-width: 1.3px;
 }
