--- a/css/home2023.css
+++ b/css/home2023.css
@@ -135,7 +135,6 @@ h1 {
   font-size: 1.6rem;
   -webkit-background-clip: text;
           background-clip: text;
-  background-image: linear-gradient(90deg, rgb(236, 240, 241) 0%, rgb(236, 240, 241) 30%, rgba(236, 240, 241, 0.8) 32%, rgba(236, 240, 241, 0.4) 100%);
   background-image: linear-gradient(220deg, rgb(47, 54, 64) 98%, rgb(236, 240, 241) 100%);
   -webkit-text-stroke-color: transparent;
   -webkit-text-stroke-width: 1.3px;
@@ -236,7 +235,7 @@ h1 {
     font-size: 2rem;
     -webkit-background-clip: text;
             background-clip: text;
-    background-image: linear-gradient(99deg, rgb(236, 240, 241) 0%, rgb(236, 240, 241) 30%, rgba(236, 240, 241, 0.8) 32%, rgba(236, 240, 241, 0.4) 100%);
+    background-image: linear-gradient(220deg, rgb(47, 54, 64) 98%, rgb(236, 240, 241) 100%);
     -webkit-text-stroke-color: transparent;
     -webkit-text-stroke-width: 2px;
   }
