--- a/blogHome.scss
+++ b/blogHome.scss
@@ -321,7 +321,7 @@ ul {
   }
 
   .nav__link:hover {
-    text-shadow: var(--color-red) 3px 3px 3px;
+    text-shadow: #95a5a6 3px 3px 3px;
   }
 
   .blog-link:hover .blog-thumbnail {
