--- a/blogBoiler.scss
+++ b/blogBoiler.scss
@@ -171,7 +171,7 @@ ul {
 }
 
 .nav__link:hover {
-  text-shadow: var(--color-red) 3px 3px 3px;
+  text-shadow: #95a5a6 3px 3px 3px;
 }
 
 .bottom-nav {
