--- a/css/blogBoiler.css
+++ b/css/blogBoiler.css
@@ -176,7 +176,7 @@ ul {
 }
 
 .nav__link:hover {
-  text-shadow: var(--color-red) 3px 3px 3px;
+  text-shadow: #95a5a6 3px 3px 3px;
 }
 
 .bottom-nav {
