--- a/css/blogHome.css
+++ b/css/blogHome.css
@@ -313,7 +313,7 @@ ul {
     font-size: 1.6rem;
   }
   .nav__link:hover {
-    text-shadow: var(--color-red) 3px 3px 3px;
+    text-shadow: #95a5a6 3px 3px 3px;
   }
   .blog-link:hover .blog-thumbnail {
     filter: grayscale(80%);
