--- a/css/contactMF.css
+++ b/css/contactMF.css
@@ -227,7 +227,7 @@ ul {
     font-size: 1.6rem;
   }
   .nav__link:hover {
-    text-shadow: var(--color-red) 3px 3px 3px;
+    text-shadow: #95a5a6 3px 3px 3px;
   }
   .shrink-wrap {
     display: flex;
