--- a/css/home2023.css
+++ b/css/home2023.css
@@ -113,7 +113,7 @@ h1 {
 }
 
 .hero-img-container {
-  background-image: url(/images/blog-photos/benMafateCrop2BW.jpg);
+  background-image: url(/images/blog-photos/benMafateCrop2BWCP.jpg);
   background-size: contain;
   width: 100%;
   height: 100vh;
@@ -217,7 +217,7 @@ h1 {
 
 @media (min-width: 800px) {
   .hero-img-container {
-    background-image: url(/images/benMafateCrop3LgBW.jpg);
+    background-image: url(/images/benMafateCrop3LgBWCP.jpg);
     background-size: contain;
     width: 45%;
     height: 100vh;
@@ -250,7 +250,7 @@ h1 {
     position: relative;
   }
   .nav__link:hover {
-    text-shadow: var(--color-red) 3px 3px 3px;
+    text-shadow: #95a5a6 3px 3px 3px;
   }
   .nav__link {
     transition: 0.3s ease-in-out;
