--- a/home2023.scss
+++ b/home2023.scss
@@ -117,9 +117,21 @@ h1 {
   margin-left: 42%;
 }
 
+// .logo {
+//   display: flex;
+//   justify-content: center;
+// }
+
+.logo-img {
+  margin-top: 0.5em;
+  margin-left: 1.5em;
+  width: 25%;
+}
+
 .name-text {
   position: absolute;
   top: 3%;
+
   left: 3%;
   z-index: 1002;
   font-family: var(--raleway-font);
