--- a/css/coaching.css
+++ b/css/coaching.css
@@ -18,12 +18,17 @@
   --color-grey: #7f8c8d;
 }
 
+.wrapper {
+  width: 100vw;
+}
+
 body {
   margin: 0;
   font-family: var(--roboto-font);
   font-size: 1.3rem;
   color: var(--color-white);
   background-color: #2f3640;
+  width: 100vw;
 }
 
 img {
