--- a/coaching.scss
+++ b/coaching.scss
@@ -147,13 +147,33 @@ ul {
   background-color: rgba(223, 230, 233, 0.7);
   color: black;
   font-family: "Raleway", sans-serif;
-
   font-weight: 500;
   letter-spacing: 1.5px;
   border-radius: 10px;
   font-size: 1.6rem;
   text-align: center;
   padding: 5px 5px;
+}
+
+.language-subhead {
+  font-family: "Raleway", sans-serif;
+  font-size: 1.3rem;
+  text-align: center;
+  color: var(--color-white);
+  padding-top: 0;
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+}
+
+.flags {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin-bottom: 2rem;
+}
+
+.flag-image {
+  width: 20%;
 }
 
 .body-subhead {
@@ -251,7 +271,7 @@ ul {
 }
 .race_logo-detail {
   width: 80%;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0;
   margin-top: 1rem;
 }
 
@@ -487,6 +507,44 @@ ul {
     font-size: 2.2rem;
     text-align: center;
   }
+
+  //events
+
+  .race_logo {
+    width: 40%;
+    margin-bottom: 0.7rem;
+  }
+  .race_logo_small {
+    width: 35%;
+    margin-bottom: 1rem;
+  }
+  .race_logo-detail {
+    width: 60%;
+    margin-bottom: 0;
+    margin-top: 1rem;
+  }
+
+  .language-subhead {
+    font-family: "Raleway", sans-serif;
+    font-size: 2rem;
+    text-align: center;
+    color: var(--color-white);
+    padding-top: 0;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .flags {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin-bottom: 2rem;
+  }
+
+  .flag-image {
+    width: 15%;
+  }
+
   //services
 
   .list-heading {
