--- a/results.scss
+++ b/results.scss
@@ -145,6 +145,7 @@ ul {
   top: 0;
   left: 7%;
   border-left: 1px dashed var(--color-white);
+  z-index: -1;
 }
 
 .results-list__year {
@@ -166,6 +167,20 @@ ul {
   font-size: 1.6rem;
   font-weight: 200;
   font-style: italic;
+}
+
+.recap {
+  font-family: var(--p-font);
+  text-decoration: underline 2px dotted var(--color-white);
+  text-underline-offset: 4px;
+  color: var(--color-white);
+  font-size: 1.3rem;
+  // text-transform: lowercase;
+}
+
+.pen-icon {
+  color: var(--color-white);
+  font-size: 0.8em;
 }
 
 .list__title {
