More little things

--- a/home2023.scss
+++ b/home2023.scss
@@ -215,7 +215,7 @@ h1 {
 .nav__link {
   color: var(--color-white);
   text-decoration: none;
-  text-transform: lowercase;
+  // text-transform: lowercase;
   font-weight: 200;
   //   text-shadow: #2f3640 2px 2px 5px;
   align-self: center;
