--- a/results.scss
+++ b/results.scss
@@ -122,7 +122,9 @@ ul {
   font-weight: 800;
   text-shadow: #2f3640 2px 2px 5px;
   margin-top: 1em;
-  font-size: 5rem;
+  font-size: 4rem;
+  text-align: center;
+  margin-bottom: 0;
 }
 
 .pyramid-img {
@@ -132,6 +134,10 @@ ul {
   right: 0;
   z-index: -1;
 }
+
+// .section-body {
+//   margin-top: 1em;
+// }
 
 .results__list {
   position: relative;
@@ -149,7 +155,7 @@ ul {
 }
 
 .results-list__year {
-  font-size: 1.2em;
+  font-size: 1.5em;
   font-family: var(--roboto-font);
   text-align: center;
   margin-bottom: 0.5rem;
