--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,9 @@
-body {
-  background-color: #7f8c8d;
-}/*# sourceMappingURL=about.css.map */ 0;
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 :root {
