--- a/css/results.css
+++ b/css/results.css
@@ -108,7 +108,7 @@ ul {
 }
 
 .nav__link:hover {
-  text-shadow: #95a5a6 3px 3px 3px;
+  text-shadow: var(--color-gold) 3px 3px 3px;
 }
 
 .title-section {
